package Mesh;

import EnhancedSets.PolygonSet;
import EnhancedSets.SegmentSet;
import EnhancedSets.VertexSet;
import Geometries.Centroid;
import Helpers.ADTToStructsConverter;
import Helpers.JTSToGeneratorConverter;
import Helpers.NeighbourCalculator;
import Helpers.VoronoiDiagram;
import ca.mcmaster.cas.se2aa4.a2.io.Structs;
import org.locationtech.jts.geom.Geometry;
import org.locationtech.jts.geom.Coordinate;

import java.util.*;
import java.util.List;

public class Mesh implements GeometryDiagram {
    public int width = 500;
    public int height = 500;
    private final double precision = 0.01;

    public Structs.Mesh mesh;
    public List<Centroid> centroids;
    public VertexSet vertices;
    public SegmentSet segments;
    public PolygonSet polygons;
    public Set<Structs.Vertex> rudimentaryVertices;
    public Set<Structs.Segment> rudimentarySegments;
    public Set<Structs.Polygon> rudimentaryPolygons;
    public ADTToStructsConverter converter = new ADTToStructsConverter();
    public JTSToGeneratorConverter JTSconverter = new JTSToGeneratorConverter();

    /**
     * calls function to generate the Voronoi Diagram
     * @return Structs.Mesh.Mesh generated by the previous call
     */
    public Structs.Mesh generate() {
        generateDiagram(generatePoints());
        return mesh;
    }

    /**
     * Generates the Voronoi diagram and puts it into the mesh attribute
     * @param coordsList: List of coordinates to build the voronoi diagram around
     */
    protected void generateDiagram(List<Coordinate> coordsList) {
        Geometries.Coordinate.precision = precision;
        List<Geometry> polygonsJTS = new VoronoiDiagram(width, height, precision).getVoronoiDiagram(coordsList);

        centroids = new ArrayList<>();

        // convert the JTS Geometries from voronoi diagram generator to our Geometries

        JTSconverter.convertAllData(polygonsJTS);
        centroids = JTSconverter.getCentroids();

        // Add Neighbours
        new NeighbourCalculator().addNeighbours(polygonsJTS, JTSconverter.getPolygons(), centroids);

        // Convert all our geometries into the io ones
        rudimentaryVertices = converter.convertVertices(JTSconverter.getVertices());
        rudimentarySegments = converter.convertSegments(JTSconverter.getSegments());
        rudimentaryPolygons = converter.convertPolygons(JTSconverter.getPolygons());

        mesh = Structs.Mesh.newBuilder()
                .addAllVertices(rudimentaryVertices)
                .addAllSegments(rudimentarySegments)
                .addAllPolygons(rudimentaryPolygons)
                .build();
    }

    /**
     * Gets the centroids of the generated voronoi diagram
     * @return List<Centroid>
     */
    public List<Centroid> getCentroids() {
        return centroids;
    }

    /**
     * Generate a list of points to generate the voronoi diagram around
     * @return List of points
     */
    protected List<Coordinate> generatePoints() {
        return new ArrayList<>();
    };
}
